syntax = "proto3";

package user;
option go_package = "internal/api/proto/userpb";

message User {
  int64 id = 1;
  string name = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
  string role = 6;
}

message CreateUserRequest {
  string name = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  string role = 5;
}

message CreateUserResponse {
  int64 id = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string lastName = 3;
  string email = 4;
  string role = 5;
}

message UpdateUserResponse {
  string message = 1;
}

message FindUserByIDRequest {
  int64 id = 1;
}

message FindUserByEmailRequest {
  string email = 1;
}

message FindUserByNameRequest {
  string name = 1;
}

message FindUserByNameResponse {
  repeated User users = 1;
}

message ActivateUserRequest {
  int64 id = 1;
}

message ActivateUserResponse {
  string message = 1;
}

message DeactivateUserRequest {
  int64 id = 1;
}

message DeactivateUserResponse {
  string message = 1;
}

message UpdateUserPasswordRequest {
  string oldPassword = 1;
  string newPassword = 2;
}

message UpdateUserPasswordResponse {
  string message = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc DeactivateUser(DeactivateUserRequest) returns (DeactivateUserResponse);
  rpc ActivateUser(ActivateUserRequest) returns (ActivateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc UpdateUserPassword(UpdateUserPasswordRequest) returns (UpdateUserPasswordResponse);
  rpc FindUserByID(FindUserByIDRequest) returns (User);
  rpc FindUserByEmail(FindUserByEmailRequest) returns (User);
  rpc FindUserByName(FindUserByNameRequest) returns (FindUserByNameResponse);
}
